@@ -1,0 +1,1 @@
+alter table mapwormholes add column rally tinyint(4) default null after permanent;
